<resources>
    <string name="app_name">密码仓库</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="first_password">密码</string>
    <string name="phone">手机</string>
    <string name="second_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_regist">注册</string>
    <string name="finger">指纹登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user">请输入只含数字及字母的用户名</string>
    <string name="error_invalid_password">请输入至少6位密码</string>
    <string name="error_seem_password">两次输入密码不匹配</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="not_exist">用户不存在</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="detail_title">标题</string>
    <string name="detail_name">用户名</string>
    <string name="detail_pwd">密码</string>
    <string name="detail_add">新增</string>
    <string name="detail_del">删除</string>
    <string name="detail_save">保存</string>
    <string name="detail_description">描述</string>
    <string name="notice">提示</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
</resources>
