<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/oldPwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned = "false">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="23dp"
            android:text="@string/new_pwd"
            android:gravity="center"
            android:layout_weight="3"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/pwd_selector"
            android:layout_weight="1">

            <EditText
                android:id="@+id/new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="18dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned = "false">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="23dp"
            android:text="@string/new_pwd"
            android:gravity="center"
            android:layout_weight="3"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/pwd_selector"
            android:layout_weight="1">

            <EditText
                android:id="@+id/new_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="18dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:id="@+id/save_bt"
        android:background="@color/transparent_60"
        android:text="@string/detail_save" />

</LinearLayout>